side drawer layout almost ready, moved logo to the right on the mobile display Toolbar

--- a/src/i18n/default.json
+++ b/src/i18n/default.json
@@ -1,5 +1,7 @@
 {
   "en": {
-    "test_3c83e52f": "test"
+    "alertnetworkmessage_bf4c3a7e": "alertNetworkMessage",
+    "contactme_c658c39e": "contactMe",
+    "gitrepolink_53d69b65": "gitRepoLink"
   }
 }
