--- a/src/i18n/pl.json
+++ b/src/i18n/pl.json
@@ -1,5 +1,7 @@
 {
   "pl": {
-    "test_3c83e52f": "teścik"
+    "alertnetworkmessage_bf4c3a7e": "alertNetworkMessage",
+    "contactme_c658c39e": "Kontakt",
+    "gitrepolink_53d69b65": "gitRepoLink"
   }
 }
