added icons and styles to contact, working on flexbox within contact

--- a/src/i18n/default.json
+++ b/src/i18n/default.json
@@ -2,6 +2,7 @@
   "en": {
     "alertnetworkmessage_bf4c3a7e": "alertNetworkMessage",
     "contactme_c658c39e": "contactMe",
+    "contactwithme_516bf5ad": "contactWithMe",
     "gitrepolink_53d69b65": "gitRepoLink"
   }
 }
