layout changes, removed placeholders, added full language support

--- a/src/i18n/default.json
+++ b/src/i18n/default.json
@@ -5,11 +5,13 @@
     "gitrepolink_53d69b65": "gitRepoLink",
     "greeting_709b34": "greeting",
     "greetingsub_ee1e3bf2": "greetingSub",
+    "home_952a97f3": "home",
     "homep1_b963695f": "homeP1",
     "homep2_206a38e5": "homeP2",
     "homep3_576d0873": "homeP3",
     "homep4_c9099dd0": "homeP4",
     "homep5_be0ead46": "homeP5",
+    "profile_a46f8371": "profile",
     "profilep1_ba5f5ad5": "profileP1",
     "profilep2_23560b6f": "profileP2",
     "profilep3_54513bf9": "profileP3",
