--- a/src/i18n/pl.json
+++ b/src/i18n/pl.json
@@ -5,12 +5,14 @@
     "gitrepolink_53d69b65": "Repozytorium tego projektu",
     "greeting_709b34": "Hej! Nazywam się Jan",
     "greetingsub_ee1e3bf2": "i uwielbiam technologię!",
+    "home_952a97f3": "Home",
     "homep1_b963695f": "Mam %{age} lat i mieszkam we Wrocławiu. Zawsze z entuzjazmem podchodziłem do tematu komputerów i programowania. W liceum wybrałem klasę o profilu programistycznym. Idąc na studia chciałem nauczyć się więcej  o sprzęcie i elektronice, dlatego wybrałem Automatykę i Robotykę na Wydziale Elektroniki. Ukończyłem ten kierunek w języku angielskim jako magister Systemów Wbudowanych w Robotyce.",
     "homep2_206a38e5": "Przed ostatecznym ustatkowaniem się postanowiłem skorzystać z okazji i zobaczyć trochę świata. Konsekwencją tej decyzji był wyjazd do Brazylii, gdzie założyłem firmę.",
     "homep3_576d0873": "Jednak moje zainteresowanie programowaniem nigdy nie osłabło. Podczas przerabiania jednego z kursów online, zdałem sobie sprawę, że powinienem wykorzystać swoją pasję do celów zawodowych.",
-    "homep4_c9099dd0": "Wierzę, że życie to nieustająca praca nad sobą, a najlepszym sposobem rozwoju jest otoczenie się ludżmi, którzy ten rozwój wspierają.",
+    "homep4_c9099dd0": "Uważam, że życie to nieustająca praca nad sobą, a najlepszym sposobem rozwoju jest otoczenie się ludżmi, którzy ten rozwój wspierają.",
     "homep5_be0ead46": "Postanowiłem więc rozpocząć swoją karierę w branży IT, a najlepszym według mnie na to miejscem jest dokładnie to samo miejsce, które zapoczątkowało moją fascynację nowoczesnymi aplikacjami webowymi - Monterail. ",
-    "profilep1_ba5f5ad5": "Od zawsze interesowała mnie webówka. Wszystko zaczęło się w podstawówce, od kreatora stron  internetowych, w którym mogłem wstawić zdjęcia kotów na czerwonym tle w układzie strony opartym na tabeli. Od tamtej pory miałem styczność HTMLem, CSSem, PHP i JavaScriptem. JavaScriptem, który zawsze wydawał mi się banalny. To ten śmieszny język programowania do animacji, prawda? Każdy zna JavaScript!",
+    "profile_a46f8371": "O mnie",
+    "profilep1_ba5f5ad5": "Od zawsze interesowała mnie webówka. Wszystko zaczęło się w podstawówce od kreatora stron  internetowych, w którym mogłem wstawić zdjęcia kotów na czerwonym tle w układzie strony opartym na tabeli. Od tamtej pory miałem styczność HTMLem, CSSem, PHP i JavaScriptem. JavaScriptem, który zawsze wydawał mi się banalny. To ten śmieszny język programowania do animacji, prawda? Każdy zna JavaScript!",
     "profilep2_23560b6f": "Dopiero niedawno uzmysłowiłem sobie jak płytkie było moje pojmowanie i zrozumienie tego języka. Jak zmienił się na przestrzeni lat, jaki się stał potężny i wpływowy. Moje zainteresowanie JavaScriptem wzrosło jeszcze bardziej gdy dowiedziałem się o Node.js. Za jego pomocą można pisać aplikacje używając jednego języka zarówno na frontendzie, jak i backendzie - wprost niesamowite.",
     "profilep3_54513bf9": "Odkąd miałem przyjemność uczestniczyć w warsztatch organizowanych przez waszą firmę i poznać narzędzia używane przez profesjonalistów zawsze chciałem pracować w waszym zespole.",
     "profilep4_ca35ae5a": "Chętnie nauczę się kolejnych języków programowania, frameworków, metodologii czy nowych technologii, by poszerzyć swój zakres kompetencji oraz w miarę potrzeb odświeżę zdobytą już wiedzę.",
