moved FS files, changed translation

--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -15,7 +15,7 @@
     "profilep1_ba5f5ad5": "I’ve always been interested in web development. It all started in primary school with web page creator in which I was able to put cat images on red background inside table layout. And from there it went on; HTML, CSS, PHP and JavaScript. JavaScript which I always thought I knew. It was that toy language used to do animations, right? Everyone knows JavaScript!",
     "profilep2_23560b6f": "Only recently did I discover how shallow my perception and understanding of the language was, how it has changed over the years and how powerful and influential it has become. My interest in JS even more piqued when I learned about Node.js. It is possible to write web apps using the same language on the frontend as well as backend - simply amazing.",
     "profilep3_54513bf9": "Ever since attending workshops organized by your company and learning the tools used by professionals, I wanted to work on your team.",
-    "profilep4_ca35ae5a": "I am willing to learn the bleeding edge technology, learn new programming languages, frameworks and methodologies to expand my programming toolbox, as well as polish some basics that might have gotten a little rusty.",
+    "profilep4_ca35ae5a": "I am willing to learn the cutting edge technology, learn new programming languages, frameworks and methodologies to expand my programming toolbox, as well as polish some basics that might have gotten a little rusty.",
     "why_6a767b6c": "Why?",
     "whysub_1ccf8c42": "Why am I applying for a job as Junior QA at Monterail?"
   }
